dada_tests/validate/duplicate_func_func/compiler-output.ref
Error: already have a function named `test`
   ╭─[dada_tests/validate/duplicate_func_func.dada:2:4]
   │
 1 │ fn test() {}
   ·    ──┬─  
   ·      ╰─── the function is here
 2 │ fn test() {}
   ·    ──┬─  
   ·      ╰─── ignoring this function for now
───╯
